# polkadot-staking-miner

./: .dockerignore  .gitignore  .gitlab-ci.yml  .rustfmt.toml  CHANGELOG.md  CODEOWNERS  Cargo.toml  Dockerfile  Dockerfile.README.md  README.md  RELEASE-CHECKLIST.md  build.rs  rustfmt.toml  zombienet-staking-runtimes.toml
.github/: dependabot.yml
.github/issue_templates/: nightly_run_failed.md  nightly_run_failed_gitlab.md
.github/workflows/: build-polkadot-for-nightly.yml  build-staking-miner-playground-for-nightly.yml  cache-cleanup.yml  ci.yml  nightly-fail.yml  nightly.yml  publish-docker-description.yml  staking-miner-playground-ci.yml  staking-miner-playground.yml
.github/workflows/actions/prepare-binaries/: README.md  action.yml
artifacts/: kusama.scale  metadata.scale  multi_block.scale  polkadot.scale  westend.scale
chainspecs/: kusama-dev.json  kusama.json  kusama_asset_hub.json  polkadot-dev.json  polkadot.json  polkadot_asset_hub.json  westend.json  westend_asset_hub.json
multi-block/: Cargo.toml  metadata.scale
multi-block/src/: client.rs  epm.rs  error.rs  helpers.rs  main.rs  opts.rs  prelude.rs  signer.rs  static_types.rs
multi-block/src/commands/: mod.rs  monitor.rs
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs
offline-election-prediction-staking/: Cargo.toml  README.md  check_base58.py  metadata.txt
offline-election-prediction-staking/src/: cli.rs  data_fetcher.rs  lib.rs  main.rs  predict.rs  types.rs
offline-election-prediction-staking/tests/: integration_tests.rs
runtime/src/: lib.rs
scripts/: generate_changelog.sh
src/: chain.rs  client.rs  dry_run.rs  emergency_solution.rs  epm.rs  epm_dynamic.rs  error.rs  helpers.rs  lib.rs  macros.rs  main.rs  monitor.rs  opt.rs  prelude.rs  prometheus.rs  runtime.rs  signer.rs  static_types.rs  utils.rs
src/commands/: dry_run.rs  emergency_solution.rs  mod.rs  monitor.rs  monitor_multi_block.rs  predict.rs  server.rs  types.rs
src/commands/dry_run/: mod.rs
src/commands/legacy/: dry_run.rs  emergency_solution.rs  mod.rs  monitor.rs
src/commands/multi_block/: mod.rs  monitor.rs  types.rs
src/dynamic/: election_data.rs  legacy.rs  mod.rs  multi_block.rs  pallet_api.rs  staking.rs  utils.rs
src/epm/: legacy.rs  mod.rs  multi_block.rs  pallet_api.rs  utils.rs
src/prelude/: legacy.rs  mod.rs  multi_block.rs
src/static_types/: legacy.rs  mod.rs  multi_block.rs
staking-miner-playground/: Cargo.toml  authorities.json  nominators.json  stakers.json
staking-miner-playground/node/: Cargo.toml
staking-miner-playground/node/src/: chain_spec.rs  command.rs  command_helper.rs  rpc.rs  service.rs
staking-miner-playground/runtime/: Cargo.toml  build.rs
staking-miner-playground/runtime/src/: lib.rs  pallet_config_block.rs
staking-miner-test-node/.github/workflows/: check.yml
staking-miner-test-node/node/: Cargo.toml
staking-miner-test-node/node/src/: chain_spec.rs
staking-miner-test-node/runtime/: Cargo.toml
staking-miner-test-node/runtime/src/: lib.rs  pallet_config_block.rs
tests/: cli.rs  common.rs  monitor.rs  multi_block_monitor.rs  predict.rs  server.rs  staking_miner_node.rs
