[package]
name = "polkadot-staking-miner"
version = "1.6.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
rust-version = "1.81.0"
license = "GPL-3.0"
repository = "https://github.com/paritytech/polkadot-staking-miner"
homepage = "https://www.parity.io/"
description = "A tool to submit NPoS election solutions for substrate based chains"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
scale-info = { package = "scale-info", version = "2.11.6" }
clap = { version = "4.5", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
jsonrpsee = { version = "0.24.7", features = ["ws-client"] }
log = "0.4"
serde = "1.0"
serde_json = "1.0"
futures = "0.3"
thiserror = "2.0"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "sync", "signal"] }
pin-project-lite = "0.2"

# subxt
scale-value = "0.17"
subxt = "0.38.0"

# polkadot-sdk
polkadot-sdk = { version = "0.7", features = ["frame-election-provider-support", "frame-support", "sp-npos-elections", "sp-core", "sp-runtime", "pallet-election-provider-multi-phase"] }

# prometheus
prometheus = "0.13"
hyper = { version = "0.14.31", features = ["server", "http1", "http2", "tcp"] }
once_cell = "1.20"

[dev-dependencies]
anyhow = "1"
assert_cmd = "2.0"
regex = "1"
