[package]
name = "polkadot-staking-miner"
version = "1.6.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
rust-version = "1.81.0"
license = "GPL-3.0"
repository = "https://github.com/paritytech/polkadot-staking-miner"
homepage = "https://www.parity.io/"
description = "A tool to submit NPoS election solutions for substrate based chains"
resolver = "2"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
scale-info = { package = "scale-info", version = "2.11.6" }
clap = { version = "4.5", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
jsonrpsee = { version = "0.24.7", features = ["ws-client"] }
log = "0.4"
serde = "1.0"
serde_json = "1.0"
futures = "0.3"
thiserror = "2.0"
tokio = { version = "1.42", features = ["macros", "rt-multi-thread", "sync", "signal"] }
pin-project-lite = "0.2"

# subxt
scale-value = "0.17"
subxt = "0.38.0"

# goncalo's polkadot-sdk branch
frame-election-provider-support-v2 = { package = "frame-election-provider-support", optional = true, git = "https://github.com/paritytech/polkadot-sdk", branch = "staking-parachain-exp" }
frame-support-v2 = { package = "frame-support", optional = true, git = "https://github.com/paritytech/polkadot-sdk", branch = "staking-parachain-exp" }
sp-npos-elections-v2 = { package = "sp-npos-elections", optional = true, git = "https://github.com/paritytech/polkadot-sdk", branch = "staking-parachain-exp" }
sp-core-v2 = { package = "sp-core", optional = true, git = "https://github.com/paritytech/polkadot-sdk", branch = "staking-parachain-exp" }
sp-runtime-v2 = { package = "sp-runtime", optional = true, git = "https://github.com/paritytech/polkadot-sdk", branch = "staking-parachain-exp" }
pallet-election-provider-multi-phase-v2 = { package = "pallet-election-provider-multi-phase", optional = true, git = "https://github.com/paritytech/polkadot-sdk", branch = "staking-parachain-exp" }

# polkadot-sdk
#polkadot-sdk = { version = "0.9", features = ["frame-election-provider-support", "frame-support", "sp-npos-elections", "sp-core", "sp-runtime", "pallet-election-provider-multi-phase"], optional = true }
frame-election-provider-support = { package = "frame-election-provider-support", optional = true, version = "38" }
frame-support = { optional = true, version = "38.2" }
sp-npos-elections = { optional = true, version = "34" }
sp-core = { optional = true, version = "34" }
sp-runtime = { optional = true, version = "39" }
pallet-election-provider-multi-phase = { optional = true, version = "37" }

# prometheus
prometheus = "0.13"
hyper = { version = "0.14.31", features = ["server", "http1", "http2", "tcp"] }
once_cell = "1.20"

[dev-dependencies]
anyhow = "1"
assert_cmd = "2.0"
regex = "1"

[build-dependencies]
cfg_aliases = "0.2.0"

[features]
default = ["legacy"]
legacy = ["frame-election-provider-support", "frame-support", "sp-npos-elections", "sp-core", "sp-runtime", "pallet-election-provider-multi-phase"]
experimental-multi-block = ["frame-election-provider-support-v2", "frame-support-v2", "sp-npos-elections-v2", "sp-core-v2", "sp-runtime-v2", "pallet-election-provider-multi-phase-v2"]
