[package]
name = "polkadot-staking-miner"
version = "1.8.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2024"
rust-version = "1.85.0"
license = "GPL-3.0"
repository = "https://github.com/paritytech/polkadot-staking-miner"
homepage = "https://www.parity.io/"
description = "A tool to submit NPoS election solutions for substrate based chains"
resolver = "2"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.7.5" }
scale-info = { package = "scale-info", version = "2.11.6" }
clap = { version = "4.5", features = ["derive", "env"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
jsonrpsee = { version = "0.25.1", features = ["ws-client"] }
log = "0.4"
serde = "1.0"
serde_json = "1.0"
futures = "0.3"
thiserror = "2.0"
tokio = { version = "1.46", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "signal",
] }
pin-project-lite = "0.2"

# subxt
scale-value = "0.18"
subxt = { version = "0.42.1", features = ["reconnecting-rpc-client"] }
subxt-rpcs = "0.42.1"


# polkadot-sdk
polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk", features = [
    "frame-election-provider-support",
    "frame-support",
    "sp-npos-elections",
    "sp-core",
    "sp-runtime",
    "sp-version",
    "pallet-election-provider-multi-block",
], branch = "master" }

# prometheus
prometheus = "0.14"
hyper = { version = "1.6.0", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1.15", features = [
    "server-auto",
    "server-graceful",
    "tokio",
] }
http-body-util = "0.1.0"
once_cell = "1.21"

[dev-dependencies]
anyhow = "1"
assert_cmd = "2.0"
regex = "1"

[features]
integration-tests = []

[package.metadata.docs.rs]
default-features = true
rustdoc-args = ["--cfg", "docsrs"]
