[package]
name = "multi-block"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
thiserror = "1.0"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "sync", "signal"] }
clap = { version = "4.5", features = ["derive", "env"] }
jsonrpsee = { version = "0.22.3", features = ["ws-client"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = "1.0"
serde_json = "1.0"
futures = "0.3"
log = "0.4"
once_cell = "1.20"
hyper = { version = "0.14.30", features = ["server", "http1", "http2", "tcp"] }

# subxt
scale-value = "0.16.3"
subxt = { version = "0.37.0", features = ["substrate-compat"] }

# polkadot-sdk
#frame-election-provider-support = "37.0.0"
#pallet-election-provider-multi-block = "4.0.0-dev" # uncomment once pallet is published
#sp-npos-elections = "34.0.0"
#frame-support = "37.0.0"
#sp-runtime = "39.0.1"

frame-election-provider-support = { path = "/Users/gpestana/parity/polkadot-sdk/substrate/frame/election-provider-support" }
pallet-election-provider-multi-block = { path = "/Users/gpestana/parity/polkadot-sdk/substrate/frame/election-provider-multi-block" }
sp-npos-elections = { path = "/Users/gpestana/parity/polkadot-sdk/substrate/primitives/npos-elections" }
frame-support = { path = "/Users/gpestana/parity/polkadot-sdk/substrate/frame/support" }
sp-runtime = { path = "/Users/gpestana/parity/polkadot-sdk/substrate/primitives/runtime" }
