[package]
name = "offline-election"
version = "0.1.0"
edition = "2024"
authors = ["Parity Technologies <admin@parity.io>"]
license = "GPL-3.0"
description = "Offline election prediction staking tool"

[[bin]]
name = "offline-election"
path = "src/main.rs"

[dependencies]
hex = "0.4.3"
parity-scale-codec = "3.7.5"
serde = "1.0.226"
serde_json = "1.0.145"
sp-npos-elections = "38.0.0"
subxt = "0.44.0"
tokio = { version = "1.47.1", features = ["full"]}
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
futures = "0.3"
scale-value = "0.18.0"
clap = { version = "4.5.48", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sp-arithmetic = "28.0.0"
sp-core = "38.0.0"
polkadot = "26.0.0"

[dev-dependencies]
tempfile = "3.8.0"