[package]
name = "staking-miner-playground"
version = "4.0.0-dev"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "staking-miner-playground"

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
futures = "0.3"
serde_json = "1"

# polkadot-sdk
frame-system = { git = "https://github.com/paritytech/polkadot-sdk" }
pallet-staking = { git = "https://github.com/paritytech/polkadot-sdk" }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk" }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk" }
sc-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk" }
sc-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk" }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk" }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk" }
sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk" }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk" }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk" }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk" }

# These dependencies are used for the node template's RPCs
jsonrpsee = { version = "0.16.2", features = ["server"] }
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk" }
sc-rpc-api = { git = "https://github.com/paritytech/polkadot-sdk" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk" }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk" }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk" }

# Local Dependencies
runtime = { version = "4.0.0-dev", path = "../runtime" }
lazy_static = "1.4.0"
rand = "0.8.5"

# CLI-specific dependencies
try-runtime-cli = { git = "https://github.com/paritytech/polkadot-sdk", optional = true }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk" }

[features]
default = []
runtime-benchmarks = ["runtime/runtime-benchmarks"]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = ["runtime/try-runtime", "try-runtime-cli"]
