[package]
name = "staking-miner-playground"
version = "4.0.0-dev"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "staking-miner-playground"

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
futures = "0.3"
serde_json = "1"

# polkadot-sdk
frame-system = "27"
pallet-staking = "27"
pallet-transaction-payment = "27"
sc-cli = "0.35"
sc-client-api = "27"
sc-consensus = "0.32"
sc-consensus-aura = "0.33"
sc-consensus-grandpa = "0.18"
sc-executor = "0.31"
sc-network = "0.33"
sc-service = "0.34"
sc-telemetry = "14"
sc-transaction-pool = "27"
sc-transaction-pool-api = "27"
sc-offchain = "28"
sp-consensus-aura = "0.31"
sp-consensus-grandpa = "12"
sp-core = "27"
sp-inherents = "25"
sp-keyring = "30"
sp-runtime = "30"
sp-timestamp = "25"

# These dependencies are used for the node template's RPCs
jsonrpsee = { version = "0.16.2", features = ["server"] }
sc-basic-authorship = "0.33"
sc-rpc-api = "0.32"
sp-api = "25"
sp-blockchain = "27"
sp-block-builder = "25"
substrate-frame-rpc-system = "27"
pallet-transaction-payment-rpc = "29"

# Local Dependencies
runtime = { version = "4.0.0-dev", path = "../runtime" }
lazy_static = "1.4.0"
rand = "0.8.5"

[build-dependencies]
substrate-build-script-utils = "10"

[features]
default = []
