[package]
name = "node-template-runtime"
version = "4.0.0-dev"
description = "A fresh FRAME-based Substrate runtime, ready for hacking."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-grandpa = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-insecure-randomness-collective-flip = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-sudo = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-staking = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-session = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-bags-list = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-staking-reward-curve = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-election-provider-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-election-provider-multi-phase = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-aura = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-executive = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-api = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-staking = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-npos-elections = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-consensus-aura = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-block-builder = {  default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-inherents = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-offchain = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-session = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-transaction-pool = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-version = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }

frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true, branch = "master" }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate.git", branch = "master" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-staking/std",
	"pallet-aura/std",
	"frame-election-provider-support/std",
	"pallet-election-provider-multi-phase/std",
	"pallet-insecure-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-staking/std",
	"sp-io/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
]
try-runtime = []
test-trimming = []
