[package]
name = "runtime"
version = "4.0.0-dev"
description = "staking-miner-playground runtime"
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
edition = "2021"
license = "Unlicense"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
log = "0.4"

pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
pallet-staking = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
pallet-session = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
pallet-bags-list = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
pallet-staking-reward-curve = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
frame-election-provider-support = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
pallet-election-provider-multi-phase = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-staking = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }

frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-staking/std",
	"pallet-aura/std",
	"frame-election-provider-support/std",
	"pallet-election-provider-multi-phase/std",
	"pallet-insecure-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-staking/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
]
try-runtime = []
test-trimming = []
